<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SignUpFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/materialButtonToggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <Button
            android:id="@+id/button_top_sign_in"
            android:layout_width="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_height="wrap_content"
            android:text="SIGN IN" />

        <Button
            android:id="@+id/button_top_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SIGN UP" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/text_view_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:text="@string/text_view_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_user_name"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_user_name"
        app:startIconContentDescription="@string/content_description_end_icon"
        app:startIconDrawable="@drawable/icon_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/text_view_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:text="@string/text_view_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_password"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_user_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_password"
        app:startIconContentDescription="@string/content_description_end_icon"
        app:startIconDrawable="@drawable/icon_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_view_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:text="@string/text_view_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/text_view_confirm_password"
        app:startIconContentDescription="@string/content_description_end_icon"
        app:startIconDrawable="@drawable/icon_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_to_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="22dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="18dp"
        android:text="@string/button_text_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_confirm_password"
        app:layout_constraintBottom_toTopOf="@+id/text_view_error_message" />


    <TextView
        android:id="@+id/text_view_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:text="text_view_error_message"
        android:textColor="#AA0000"
        android:textSize="12sp"
        android:layout_marginVertical="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_to_submit"
        />



</androidx.constraintlayout.widget.ConstraintLayout>